added admin category management for frontend